[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keys"
version = "0.1.0"
description = "Manages key generation for dimensions and merges for facts. Builds on pandas."
dependencies = ["sqlalchemy", "pandas"]

[tool.setuptools.packages.find]
where = ["."]
include = ["keys*"]